<resources>
    <string name="app_name">Football</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">SETTING</string>
    <string name="notification">NOTIFICATION</string>
    <string name="football_calendar">FOOTBALL CALENDAR</string>
    <string name="today">TODAY</string>
    <string name="today_">Today</string>
    <string name="todo">TODO</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="don_t_have_any_account">Don’t have any account?</string>
    <string name="more">More</string>
    <string name="account">Account</string>
    <string name="img">img</string>
    <string name="premier_league">Premier League</string>
    <string name="calendar">Calendar</string>
    <string name="vs" translatable="false">vs</string>
    <string name="this_match">This match will take place in 5 minutes!</string>
    <string name="already_have_any_account">already have any account</string>
    <string name="time">30/12/2021</string>
    <string name="home">Home</string>
    <string name="notification_">Notification</string>
    <string name="setting_">Setting</string>
    <string name="premier_league_">PREMIER LEAGUE</string>
</resources>