<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:riv_corner_radius="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="140dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="34dp"
        android:background="@drawable/radius_left_right_top"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <EditText
                android:layout_width="334dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="98dp"
                android:background="@drawable/bgr_edit_text"
                android:gravity="center"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint"
                android:textSize="16sp"
                tools:ignore="HardcodedText"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="334dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="38dp"
                android:background="@drawable/bgr_edit_text"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint"
                android:textSize="16sp"
                android:autofillHints="password" />

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="334dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="54dp"
                android:background="@drawable/bgr_button"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ln_SignUp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_any_account"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/blue_fb"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>