<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".NotificationFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="54dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/notification"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_gray"
            android:text="@string/today_"
            tools:ignore="RtlSymmetry" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ntfToday"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bgr_edit_text"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_gray"
            android:text="@string/more"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ntfMore"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bgr_edit_text"
            android:paddingTop="10dp"/>

    </LinearLayout>

</FrameLayout>