<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:src="@drawable/logo"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/football_calendar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bgr_widget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFootballCalendar">

            <ImageView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="54dp"
                app:srcCompat="@drawable/today"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="52dp"
                android:text="@string/today"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="80dp"
                android:text="@string/_24_12_2021"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="138dp"
                android:layout_marginEnd="54dp"
                android:background="@drawable/bgr_search"
                android:textAlignment="center" />

        </FrameLayout>
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvListCalendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"/>
    </LinearLayout>

</FrameLayout>